--- a/R4G_course.Rmd
+++ b/R4G_course.Rmd
@@ -9,7 +9,7 @@ output:
     toc_float:
       collapsed: yes
 editor_options: 
-  chunk_output_type: inline
+  chunk_output_type: console
 ---
 
 ```{r setup, include = FALSE}
@@ -65,7 +65,7 @@ knitr::purl("R4G_course.Rmd")
 ```
 
 **Note:** it will create a file called `R4G_course.R` but it won't overwrite it if it already exists.
-So, if you want some changes to be taken into account, make sure you delete the `R` file beforehand (e.g., by running the first line in the chunk above).
+So, if you want some changes to be taken into account, make sure you delete the `R` file beforehand.
 
 ### Basic Markdown syntax
 
@@ -86,7 +86,7 @@ For example if you type `1 + 1` within a chunk, it will be displayed as:
 ```
 Then, to evaluate the chunk, just press CTRL-R after having put your mouse cursor inside the chunk (anywhere).
 
-You can learn more about `R` Markdown on [this online book](https://bookdown.org/yihui/rmarkdown/) or if you already know a little, the [R Studio cheatsheet](https://raw.githubusercontent.com/rstudio/cheatsheets/main/rmarkdown.pdf) will help you to keep it all in mind.
+You can learn more about `R` Markdown on [this online book](https://bookdown.org/yihui/rmarkdown/) or if you already know a little, the [RStudio cheatsheet](https://raw.githubusercontent.com/rstudio/cheatsheets/main/rmarkdown.pdf) will help you to keep it all in mind.
 
 ------------------------------------------------------------------------
 
@@ -110,7 +110,7 @@ library(viridisLite)
 install.packages("adegenet")
 ```
 
-**Note 2:** To be able to "knit" the `R` Markdown, you will also need other `R` packages but try knitting and RStudio should handle the rest for you.
+**Note 2:** To be able to "knit" the `R` Markdown, you will also need other `R` packages but try knitting and RStudio should guide you through the necessary steps.
 
 We also add a few extra functions we coded for you:
 
@@ -146,7 +146,7 @@ Here is the basic structure:
 
 3.  the third line has a "pop flag" that indicates the next samples belong to the same population.
 
-4.  below this (until the next *pop flag*), every line is a multi-locus genotype per individual belonging to the population
+4.  below this (until the next *pop flag*), every line is a multi-locus genotype per individual belonging to the population:
 
     -   the first column with sample ID (followed by a comma)
     -   the following columns with the genotype at a given locus (the two alleles, without a separator)
@@ -158,7 +158,7 @@ Here is the basic structure:
 
 ### Reading your data into `R`
 
-In the folder `data` in this `R` Studio project you can find the genepop file called `microbov_small.gen`.
+In the folder `data` in this RStudio project you can find the genepop file called `microbov_small.gen`.
 
 We will create an `R` object that contains the data in `microbov_small.gen` using the `read.genepop()` function of `adegenet`.
 Here we need to provide the path of the file as `"/data/microbov_small.gen"` using `file =`, and some information about how microsatellite data is encoded in the file using `ncode =`.
@@ -181,7 +181,7 @@ badFormat <- read.genepop(file = "data/badFormatting.gen", ncode = 3, quiet = TR
 We "broke" this input file by including fewer locus names than data.
 The error message is telling us that the length of `dimnames [1]` (= number of locus names) does not correspond to the number of columns containing the data.
 
-As you can see, `R` provides us a clue about what the problem is.
+As you can see, `R` provides us with a clue about what the problem is.
 
 Another way we can generate an error is by providing wrong arguments to the function, despite having a properly formatted file:
 
@@ -211,7 +211,7 @@ myData
 
 ------------------------------------------------------------------------
 
-**Geeky note:** For more details on the content of the `genind` object, just try:
+**Geeky note:** for more details on the content of the `genind` object, just try:
 
 ```{r behind the genind object 1}
 str(myData)
@@ -223,9 +223,9 @@ or for even more geeky details:
 print.AsIs(myData)
 ```
 
-As you will see, the `genind` object is a particular kind of list. Technically it is a S4 object. Instead of accessing elements with `$`, when using S4 objects elements (called slots) are typically accessible with `@` (even if the programmer behind `adegenet` made it possible to use `$` anyway).
+**Geeky note:** as you can see, the `genind` object is a particular kind of list. Technically it is a so-called S4 object. Instead of accessing elements with `$` (the typical way to access elements in S3 objects -- the usual ones), when using S4 objects elements (called slots) are typically accessible with `@`, which is why `@` showed up above. To make things easier, the programmer behind `adegenet` made it possible to use `$` anyway.
 
-Since manipulating such objects is a little complicated, you should use the *accessors*, whenever available:
+Since manipulating such objects is a little complicated, you should use the *accessors* embedded in the packages, whenever available (as opposed to exploit the internal structure of the objects):
 
 ```{r accessor_nInd}
 nInd(myData) # Number of individuals
@@ -279,10 +279,10 @@ pop(myData)
 ## The `data.frame` format
 
 Not all `R` packages dealing with genetics/genomics use `genind` objects (it would be convenient if they did!).
-The package `hierfstat`, for example, just uses plain `data.frame` where the first column contains the population to which the different individuals belong, and the following columns contain the genotype of the individuals (one locus per column).
+The package `hierfstat`, for example, just uses a plain `data.frame` where the first column contains the population to which the different individuals belong, and the following columns contain the genotype of the individuals (one locus per column).
 
 In general there are functions to convert one format into another.
-To convert the `genind` objects into a `data.frame` you can use `genind2hierfstat()` from the package `hierfstat`:
+To convert a `genind` object into a `data.frame` you can use `genind2hierfstat()` from the package `hierfstat`:
 
 ```{r genind to df}
 myData_hierf <- genind2hierfstat(myData)
@@ -296,16 +296,16 @@ head(myData_hierf) # Display first 6 rows
 
 The package `pegas` which allows for the computation of many useful metrics relies on an alternative format called `loci`.
 
-```{r genind to loci}
+```{r genind to loci, }
 myData_loci <- genind2loci(myData) # or as.loci(myData)
-myData_loci
+print(myData_loci, details = FALSE) # same as just myData_loci in the console
 ```
 
-The `loci` format is more simple than the `genind` format, but a little more complex than just a naked `data.frame`.
+The default `loci` output is more simple than that of the `genind` format (at least in the R console, but not necessarily in Rmarkdown documents) but you can try `print(myData_loci, details = TRUE)` for getting a `data.frame` as an output.
 
 ------------------------------------------------------------------------
 
-**Geeky note:** A `loci` object is a `data.frame` (an S3 object) with an additional *attribute* called `"locicol"`:
+**Geeky note:** a `loci` object is a `data.frame` (an S3 object) with an additional *attribute* called `"locicol"`:
 
 ```{r exploring loci objects 1}
 str(myData_loci)
@@ -330,15 +330,15 @@ Let's check some basic things about the data in `myData`.
 ## Missing data
 
 An important consideration for analysis is the amount of missing data in our dataset.
-Several types of analyses don't cope very well with missing data.
-In some cases this may lead to poor estimates, in other cases it may lead to samples or loci not being considered in the analysis.
+Several types of analyses don't cope well with missing data.
+In some cases this may lead to poor estimates, in other cases it may lead to samples or loci not being considered in the analyses.
 
 We can use `info_table()` from `poppr` to find out about missing data, and also generate a convenient plot by including `plot = TRUE`.
 
 ```{r info table}
 missing <- info_table(myData, df = TRUE) # df = TRUE uses a long rather than 
                                          # wide format for the df
-missing[order(missing$Missing, decreasing = TRUE), ] # We reorder the table to show the highest missing on top
+missing[order(missing$Missing, decreasing = TRUE), ] # we reorder the table to show the highest missing on top
 ```
 
 ```{r info table plot}
@@ -347,7 +347,7 @@ info_table(myData, plot = TRUE, low = "white") ## NB: run in the console for bes
 
 ------------------------------------------------------------------------
 
-**Geeky note:** it is tricky but you can modify anything in this plot even when `info_table()` as no option for it:
+**Geeky note 1:** it is tricky but you can modify anything in this plot even when `info_table()` as no option for it:
 
 <!-- no evaluation as only work in interactive mode -->
 
@@ -368,10 +368,9 @@ As a general rule of thumb, we try to keep missing data below 5% in order to min
 
 ***How do you think we can achieve this?***
 
-Using `genotype_curve()` we can check how many loci we need in order to discriminate our genotypes.
-In other words, we can use it to answer the question: how many loci do we need to distinguish all our samples?  
+We can check how many loci we need in order to distinguish all our samples based on their genotypes using `genotype_curve()`.
 
-From 1 to $n-1$, where $n$ is the total number of loci, this `poppr` function randomly samples columns (= loci) 100 times without replacement, and counts the number of unique genotypes observed.
+This function from the package `poppr` randomly samples from 1 to $n-1$ columns (= loci) 100 times without replacement, where $n$ is the total number of loci, and counts the number of unique genotypes observed (MLG = MultiLocus Genotypes):
 
 ```{r genotype curve}
 gencurv <- genotype_curve(myData)
@@ -389,13 +388,13 @@ apply(gencurv, 2, range)
 
 As missing data is concentrated in a few loci and populations, rather than being thinly spread throughout the dataset, we can remove the worst offenders: a locus (ILSTS5) and a population (Pop7).
 
-We can 'drop' a population from the `genind` object using the following code, if we know the number (ID) of the population in the list of populations.
+We can 'drop' a population from the `genind` object using the following code, if we know the number of the population in the list of populations.
 
 ```{r remove pop by index, eval = FALSE, message = FALSE}
 myData[pop = -c(7), drop = TRUE] # drop = TRUE updates the number of remaining alleles!
 ```
 
-Sometimes it is more useful to be able to remove populations by their name.
+Sometimes it is more useful to be able to remove populations using their names.
 For this we need a bit more code:
 
 ```{r remove pop}
@@ -403,9 +402,9 @@ removePop <- c("Pop7")
 myData <- myData[pop = !popNames(myData) %in% removePop, drop = TRUE]
 ```
 
-Removing loci from a `genind` object works in a similar fashion as removing a population.
-If you know the number (ID) of a locus, then you can use the short code `myData[loc = -c(1)]`.
-But again, it is better to use names.
+Removing loci from a `genind` object works in a similar fashion as removing populations.
+If you know the number of a locus, then you can use the short code `myData[loc = -c(1)]`.
+But again, it is probably a better idea to use names:
 
 ```{r remove locus}
 removeLoc <- c("ILSTS5")
@@ -424,7 +423,7 @@ Let's also rerun `info_table()` to see what's changed:
 info_table(myData, plot = TRUE, low = "white")
 ```
 
-We have significantly reduced the amount of missing data in `myData`.
+We have significantly reduced the amount of missing data in `myData` 🎉.
 
 ***How else could we have solved this?***
 
@@ -454,7 +453,7 @@ Thankfully, `poppr` has some basic functionality to examine this.
 Using `mlg()` we can check for the number of unique multilocus genotypes in `myData`.
 
 Note that all software that deals with genetic data has a way of labelling missing data. 
-For example, many R packages use “NA”. 
+For example, many R packages use `NA`. 
 As missing data can contribute to observed differences between genotypes, but such differences only reflect absence of data and not necessarily a biological difference, the `mlg()` function is coded in a way to ignore differences between genotypes resulting from missing data.
 
 ```{r mlg}
@@ -481,7 +480,7 @@ myMLG <- mlg.id(myData)
 myMLG[lengths(myMLG) > 1]
 ```
 
-As we do not want to include replicates of samples in our data, we should now remove one of each replicated genotype.
+As we do not want to include sample replicates in our data, we should now remove one occurrence of each replicated genotype.
 We will remove `AFBIZEB9483`, `AFBIBOR9523`, and `AFBTSOM9374`.
 We can follow the same principle we used to remove loci and a population earlier:
 
@@ -493,7 +492,7 @@ myData
 
 Now we have 133 unique genotypes in `myData`.
 
-***If this were data from non-invasively collected samples, we may expect there to be more duplicate genotypes that we have not detected yet. Why?***
+***If this were data from non-invasively collected samples, we may expect there to be more replicates that we have not yet detected Why?***
 
 ------------------------------------------------------------------------
 
@@ -534,13 +533,13 @@ nLoc(myData) * nInd(myData)
 
 ## Are loci informative?
 
-Another important consideration is to check if our loci are variable and informative.
-Otherwise it is useless to keep them.
+Another important consideration is to check if our loci are informative; otherwise, it would be useless to keep them.
 
-What do we mean with uninformative? 
-The simplest example is if all individuals are the same at a given locus. 
-This might be due to experimental design, if we designed our microsatellite primers using genetic data from another species (e.g. we use genetic data from the cat to design primers to genotype lions). 
-But there are also processes working at the population level that could lead to this. 
+The simplest example for an uninformative locus would be one for which all individuals would have the same genotype.
+
+This might be due to a suboptimal experimental design, such as when microsatellite primers are designed using genetic data from another species (e.g. genetic data from the cat to design primers to genotype lions).
+
+But there are also biological processes that could lead to this result.
 
 ***Can you think of an example?***
 
@@ -556,7 +555,7 @@ informloci(myData)
 
 The important information we just obtained is the display *"All sites polymorphic"*.
 That implies that, in our case, all loci are informative and they are kept.
-If we had uninformative loci, and wanted to remove them, we would have run the following:
+Had we detected uninformative loci and wanted to remove them, we would have run the following:
 
 ```{r informloci 2, eval = FALSE}
 myData <- informloci(myData)
@@ -576,7 +575,7 @@ You can easily explore genetic differences between individuals -- within each po
 pairwise_similarity(myData, pop = "Pop1")
 ```
 
-We can represent the results visually:
+We can represent the results visually with a little more of `R` coding:
 
 ```{r pairwise_similarity2, results = "hide"}
 lapply(popNames(myData), function(pop) hist(pairwise_similarity(myData, pop = pop, as_vector = TRUE), main = pop, xlim = c(0, 1))) # don't forget as_vector = TRUE
@@ -678,6 +677,8 @@ Very broadly speaking, there are two types of population genetics analyses you c
 
 It is thus important to realise if your data reject the HWE assumptions!
 
+**Geeky note:** the assumption of HWE is probably never truly met in nature, but when the departure from the HWE is small enough for us to accept this artificial assumption, analyses are much more simple since they rely on simple mathematics.
+
 ------------------------------------------------------------------------
 
 ## Testing the HWE {.tabset .tabset-pills}
@@ -689,7 +690,7 @@ hw.test(myData, B = 0) ## for Monte Carlo test instead of asymptotic,
                        ## use large value of B (>= 1000)
 ```
 
-Here we have conducted a $\chi^{2}$-test based on observed and expected *genotype* frequencies calculated from the *allele* frequencies.
+Here we have conducted a $\chi^{2}$-test comparing the observed and expected *genotype* frequencies calculated from the *allele* frequencies.
 
 ***Would we expect loci to be in HWE if we consider all populations together as we have done?***
 
@@ -713,7 +714,7 @@ Let's check our data by population.
 We will split `myData` by population using the `seppop` function.
 This creates a list of `genind` objects, with every entry in the list consisting of a population.
 
-To apply the HWE test with `hw.test()` to every item in the list (ie every population), we use (as above) the function `lapply()`.
+To apply the HWE test with `hw.test()` to every item in the list (i.e. every population), we use (as above) the function `lapply()`.
 
 ```{r HWE tested per pop}
 lapply(seppop(myData), hw.test)
@@ -735,13 +736,13 @@ Some loci, in some populations, are still not in HWE.
 
 Another important consideration for analysing genetic data is the independence of loci.
 
-Imagine two loci that are physically very close on the same chromosome. Will alleles at these loci be segregating independently?
+Imagine two loci that are physically very close on the same chromosome. Alleles at these loci won't segregate independently.
 
 ***Do you know how this is measured?***
 
-For this reason, and many others (e.g. Fisher's runaway), it is possible that alleles at one locus may be associated with alleles at another locus.
+For this and other (e.g. Fisher's runaway) reasons, it is possible that alleles at one locus present a statistical association with alleles at another locus.
 In other words, we may observe *non-random association of alleles at different loci*.
-This is called linkage disequilibrium.
+This is called **linkage disequilibrium**.
 
 **Why is this important?** If the dependence between loci is not recognised, the results will be biased.
 
@@ -757,8 +758,8 @@ Here we can see the distribution of expected association between alleles at diff
 It appears we have a significant association between loci, at least when merging observations across all populations.
 
 What if we look at the same test per population?
-To answer this question, we use `seppop()` and `lapply()` as before, but now we include the function that we want to run on each pop (here, `ia()`) and the arguments for such a function.
-Here, the argument `sample` defines the number of permutations used to draw the distribution of the association index under the null hypothesis; we want a large number, e.g., 999:
+To answer this question, we use `seppop()` and `lapply()` as before, but we now include the function that we want to run on each pop (here, `ia()`) and the arguments for such a function.
+Here, the argument `sample` defines the number of permutations used to draw the distribution of the association index under the null hypothesis; so we want a large number for it, e.g., 999:
 
 ```{r index of association per pop}
 lapply(seppop(myData), ia, sample = 999)
